--- a/src/app/ui/components/not-found/not-found.component.html
+++ b/src/app/ui/components/not-found/not-found.component.html
@@ -1,12 +1,12 @@
 <div class="not-found-container">
-  <div class="content-wrapper">
-    <img src="/assets/homecard/TUMdex.png" alt="TUMdex Logo" class="logo">
-    <h1>404</h1>
-    <h2>{{ 'error.pageNotFound' | translate }}</h2>
-    <p>{{ 'error.pageNotFoundMessage' | translate }}</p>
-    <div class="buttons">
-      <a routerLink="/" class="home-button">{{ 'common.returnHome' | translate }}</a>
-      <a routerLink="/contact" class="contact-button">{{ 'common.contactUs' | translate }}</a>
+    <div class="content-wrapper">
+      <img src="/assets/homecard/TUMdex.png" alt="TUMdex Logo" class="logo">
+      <h1>404</h1>
+      <h2>Page Not Found</h2>
+      <p>The page you are looking for may be moved, deleted or temporarily out of use.</p>
+      <div class="buttons">
+        <a routerLink="/" class="home-button">Return Home Page</a>
+        <a routerLink="/contact" class="contact-button">Contact Us</a>
+      </div>
     </div>
   </div>
-</div>
