--- a/src/app/ui/components/product/product-detail/product-detail.component.html
+++ b/src/app/ui/components/product/product-detail/product-detail.component.html
@@ -57,9 +57,9 @@
 
     
 
-    <p class="product-stock" [class.in-stock]="product.stock > 0">
+    <!-- <p class="product-stock" [class.in-stock]="product.stock > 0">
       {{product.stock > 0 ? 'In Stock' : 'Out of stock'}}
-    </p>
+    </p> -->
     <p class="product-sku">SKU: {{product.sku}}</p>
 
     <div *ngFor="let featureName of allFeatures | keyvalue" class="product-feature-selector">
@@ -89,7 +89,13 @@
         <button (click)="increaseQuantity()">+</button>
       </div>
       <button class="add-to-cart-button" [disabled]="product.stock <= 0" (click)="addToCart(product)">
-        {{ 'product.addToCart' | translate }}
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" 
+      stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="cart-icon">
+      <circle cx="9" cy="21" r="1"></circle>
+      <circle cx="20" cy="21" r="1"></circle>
+      <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
+    </svg>
+    {{product.stock > 0 ? 'Add to Cart For Offer' : 'Out of Stock'}}
       </button>
     </div>
   </div>
@@ -100,7 +106,7 @@
 <div class="product-detail-tabs">
   <ul class="tab-headers">
     <li class="tab-header" [class.active]="activeTab === 'description'" (click)="setActiveTab('description')">
-      {{ 'product.description' | translate }}
+      Descriptions
     </li>
 <!--     <li class="tab-header" [class.active]="activeTab === 'reviews'" (click)="setActiveTab('reviews')">
       Değerlendirmeler <span class="badge">1899</span>
