--- a/src/app/ui/components/unauthorized/unauthorized.component.html
+++ b/src/app/ui/components/unauthorized/unauthorized.component.html
@@ -2,14 +2,14 @@
   <div class="content-wrapper">
     <img src="/assets/homecard/TUMdex.png" alt="TUMdex Logo" class="logo">
     <h1>403</h1>
-    <h2>{{ 'error.unauthorizedAccess' | translate }}</h2>
+    <h2>Unauthorized Access</h2>
     <div class="icon-container">
       <i class="fas fa-lock"></i>
     </div>
-    <p>{{ 'error.noAuthorizationMessage' | translate }}</p>
+    <p>You do not have authorization to access this page.</p>
     <div class="buttons">
-      <a routerLink="/" class="home-button">{{ 'common.returnHome' | translate }}</a>
-      <a routerLink="/login" class="login-button">{{ 'auth.signIn' | translate }}</a>
+      <a routerLink="/" class="home-button">Return Home Page</a>
+      <a routerLink="/login" class="login-button">Login</a>
     </div>
   </div>
- </div>
+</div>
