--- a/src/app/ui/components/footer/footer.component.scss
+++ b/src/app/ui/components/footer/footer.component.scss
@@ -1,5 +1,6 @@
 // footer.component.scss
 footer {
+  font-family:'Source Sans Pro', sans-serif;
   /* .social-icons {
       a {
         transition: color 0.3s ease;
