--- a/src/app/ui/components/login/login.component.scss
+++ b/src/app/ui/components/login/login.component.scss
@@ -1,3 +1,5 @@
+$font-family-base: 'Source Sans Pro', sans-serif;
+
 $home-primary-color: #333333;
 $home-secondary-color: #f0f0f0;
 $accent-color: #ff9900;
@@ -12,16 +14,21 @@ $hover-color: rgba($primary-color, 0.1);
 $success-color: #059669;
 $link-color: #0000ee;
 
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
 
 .login-container {
+
+  font-family: $font-family-base;
+  
+  * {
+    font-family: inherit;
+  }
     margin-top: 40px;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     padding: 0 20px;
-}
+
 
 .logo {
     display: flex;
@@ -138,11 +145,11 @@ $link-color: #0000ee;
         }
     }
 }
-
-.forgot-password {
+.remember{
+  display: flex;
+  justify-content: space-between;
+  .forgot-password {
     text-align: right;
-    margin: -5px 0 10px;
-
     a {
         color: $text-color;
         font-size: 0.9rem;
@@ -153,7 +160,30 @@ $link-color: #0000ee;
             color: $primary-color;
         }
     }
+  }
+  .remember-me {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+  
+    .checkbox-container {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      cursor: pointer;
+      font-size: 0.9rem;
+      color: $text-color;
+      user-select: none;
+  
+      input[type="checkbox"] {
+        width: 16px;
+        height: 16px;
+        cursor: pointer;
+      }
+    }
+  }
 }
+
 
 .btn-login {
   position: relative;
@@ -192,6 +222,7 @@ $link-color: #0000ee;
       visibility: hidden;
   }
 }
+
 
 .separator {
     display: flex;
@@ -379,5 +410,11 @@ $dark-input-bg: darken($background-color, 85%);
 
 // Add this at the end of your login.component.scss file
 @media (prefers-color-scheme: dark) {
+  .remember-me {
+    .checkbox-container {
+      color: $dark-text;
+    }
+  }
   @include dark-mode;
+}
 }
