--- a/src/app/ui/components/main-header/main-header.component.html
+++ b/src/app/ui/components/main-header/main-header.component.html
@@ -11,7 +11,6 @@
 
       <!-- Actions Section -->
       <div class="user-actions">
-        <app-language-selector></app-language-selector>
         <!-- User Account Section -->
         <ng-container *ngIf="authService.isAuthenticated; else notAuthenticated">
           <a class="user-profile-link"
@@ -32,8 +31,10 @@
           <div class="auth-links" style="display: flex; align-items: center; gap: 1rem;">
             <!-- Login Trigger ve Popover -->
             <div class="position-relative">
-              <a (click)="showLoginPopover($event)" [attr.aria-label]="'common.login' | translate">
-                {{ 'common.login' | translate }}
+              <a style="color:#e0e0e0; cursor: pointer;" 
+                 (click)="showLoginPopover($event)" 
+                 [attr.aria-label]="'Sign in'">
+                Sign In
               </a>
               <app-login-popover></app-login-popover>
             </div>
@@ -42,8 +43,9 @@
             
             <!-- Register Link -->
         
-            <a (click)="toggleDrawer(DrawerType.UserMenu)" [attr.aria-label]="'common.register' | translate">
-              {{ 'common.register' | translate }}
+            <a style="color:#0d6efd; cursor: pointer;" (click)="toggleDrawer(DrawerType.UserMenu)"
+              [attr.aria-label]="'Register'">
+              Register
             </a>
           </div>
         </ng-template>
@@ -58,7 +60,7 @@
                 d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
             </svg>
           </i>
-          <span class="btn-text">{{'cart.cart' | translate}}</span>
+          <span class="btn-text">Cart</span>
           <span class="position-absolute start-200 badge rounded-pill bg-danger" *ngIf="cartItems?.length > 0">
             {{ cartItems.length }}
           </span>
