--- a/src/app/ui/components/navbar/navbar.component.scss
+++ b/src/app/ui/components/navbar/navbar.component.scss
@@ -1,6 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
-
+$font-family-base: 'Source Sans Pro', sans-serif;
 // Variables
 $home-primary-color: #333333;
 $home-secondary-color: #f0f0f0;
@@ -33,8 +31,12 @@ $breakpoint-large: 1400px;
 }
 
 .industrial-navbar {
+  font-family: $font-family-base;
+  
+  * {
+    font-family: inherit;
+  }
   background-color: linear-gradient(to bottom, #333333, rgba(51, 51, 51, .4) 98%), linear-gradient(to bottom, #202020, #202020);
-  font-family: Arial, sans-serif;
   font-size: 14px;
   position: static;
   z-index: 1000;
@@ -548,6 +550,7 @@ $breakpoint-large: 1400px;
             display: flex;
             border: 1px solid #e0e0e0;
             height: 243px;
+            justify-content: space-evenly;
 
             img {
               width: 150px;
@@ -564,15 +567,14 @@ $breakpoint-large: 1400px;
               
                 margin: 0 0 5px 0;
                 font-size: 15px;
-                font-weight: bold;
-                display: flex;
+                font-weight: 600;
+                
 
                 .brand-name{
                   color: $primary-color;
                 }
                 .product-name{
-                  margin-left: 4px;
-                  color: $home-primary-color;
+                  color: $text-color;
                 }
                 
               }
@@ -584,6 +586,15 @@ $breakpoint-large: 1400px;
               p {
                 font-size: 1rem;
                 margin: 0 0 5px 0;
+              }
+
+              .feature-item {
+                padding: 0.375rem 0.75rem;
+                margin-top: 0.5rem;
+                background-color: #f3f4f6;
+                border-radius: 9999px;
+                font-size: 0.875rem;
+                color: $text-color;
               }
 
               .stock-status {
@@ -598,6 +609,9 @@ $breakpoint-large: 1400px;
               .price {
                 font-weight: bold;
                 font-size: 16px;
+                margin-top: 1rem;
+                border-top: 1px solid #eee;
+                padding-top: 10px;
 
                 span {
                   font-weight: normal;
