--- a/src/app/ui/components/password-reset/password-reset.component.html
+++ b/src/app/ui/components/password-reset/password-reset.component.html
@@ -1,50 +1,50 @@
 <div class="password-reset-container">
     <div class="reset-form">
-        <h2>{{ 'passwordReset.title' | translate }}</h2>
+        <h2>Reset Password</h2>
         
         <div *ngIf="!isEmailSent">
             <p class="instruction">
-                {{ 'passwordReset.instructions' | translate }}
+                Enter your email address and we'll send you instructions to reset your password.
             </p>
- 
+
             <div class="form-floating">
                 <input 
                     type="email" 
                     class="form-control" 
                     id="email" 
-                    [placeholder]="'auth.emailPlaceholder' | translate"
+                    placeholder="name@example.com"
                     [(ngModel)]="email"
                     [disabled]="!canResend">
-                <label for="email">{{ 'auth.emailAddress' | translate }}</label>
+                <label for="email">Email address</label>
             </div>
- 
+
             <button 
                 class="reset-button" 
                 (click)="sendPasswordResetEmail()"
                 [disabled]="!canResend">
-                {{ 'passwordReset.sendResetLink' | translate }}
+                Send Reset Link
             </button>
         </div>
- 
+
         <div *ngIf="isEmailSent" class="sent-confirmation">
             <div class="success-message">
                 <i class="fas fa-envelope-circle-check"></i>
-                <h3>{{ 'passwordReset.checkEmail' | translate }}</h3>
-                <p>{{ 'passwordReset.emailSentMessage' | translate }}</p>
+                <h3>Check Your Email</h3>
+                <p>We've sent password reset instructions to your email address. Please check your inbox and spam folder.</p>
             </div>
- 
+
             <button 
                 class="reset-button" 
                 (click)="sendPasswordResetEmail()"
                 [disabled]="!canResend">
-                {{ 'passwordReset.resendInstructions' | translate }}
+                Resend Instructions
                 <span *ngIf="!canResend" class="resend-timer">({{ resendTimer }}s)</span>
             </button>
         </div>
- 
+
         <a routerLink="/login" class="back-to-login">
             <i class="bi bi-arrow-left"></i>
-            {{ 'auth.backToLogin' | translate }}
+            Back to Login
         </a>
     </div>
- </div>
+</div>
