--- a/src/app/ui/components/product/product-detail/product-detail.component.scss
+++ b/src/app/ui/components/product/product-detail/product-detail.component.scss
@@ -205,7 +205,7 @@ $link-color: #0000ee;
     position: relative;
     margin-bottom: 1rem;
     border: 1px solid $border-color;
-    //border-radius: 8px;
+    border-radius: 6px;
     overflow: hidden;
     
     img {
@@ -357,7 +357,7 @@ $link-color: #0000ee;
         padding: 0.5rem 1rem;
         font-size: 0.9rem;
         border: 1px solid $border-color;
-        //border-radius: 4px;
+        border-radius: 6px;
         background-color: $background-color;
         color: $text-color;
         cursor: pointer;
@@ -425,7 +425,7 @@ $link-color: #0000ee;
       align-items: center;
       margin-right: 1rem;
       border: 1px solid $border-color;
-      //border-radius: 4px;
+      border-radius: 6px;
       overflow: hidden;
 
       button {
@@ -462,11 +462,11 @@ $link-color: #0000ee;
     flex-grow: 1;
     padding: 0.75rem;
     font-size: 1rem;
-    font-weight: bold;
+    font-weight: 500;
     color: $background-color;
     background-color: $primary-color;
     border: none;
-    //border-radius: 4px;
+    border-radius: 6px;
     cursor: pointer;
     transition: background-color 0.3s ease;
 
@@ -1021,6 +1021,7 @@ $link-color: #0000ee;
       gap: 1rem;
 
       .quantity-selector {
+        border-radius: 6px;
         width: 30%;
         margin-right: 237px;
         justify-content: center;
