--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 @import 'bootstrap-icons/font/bootstrap-icons.css';
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap');
+
 $home-primary-color: #333333;
 $home-secondary-color: #f0f0f0;
 $accent-color: #ff9900;
@@ -83,7 +85,7 @@ $link-color: #0000ee;
 ::ng-deep .mat-mdc-paginator-outer-container {
   background-color: #333333;
   color: white;
-  border-radius: 30px;
+  border-radius: 10px;
   border: 5px solid #e53935;
 }
 
@@ -97,13 +99,13 @@ $link-color: #0000ee;
 
 ::ng-deep .mat-mdc-paginator-range-actions {
   background-color: #fff;
-  border-radius: 30px;
+  border-radius: 10px;
   color: #003366;
 }
 
 ::ng-deep .mat-mdc-select-trigger {
   background-color: #fff !important;
-  border-radius: 30px;
+  border-radius: 50px;
 }
 
 ::ng-deep .mat-mdc-select-value-text {
